src/test/ui/extern/extern-const.stderr
error: extern items cannot be `const`
  --> $DIR/extern-const.rs:16:5
   |
LL |     const rust_dbg_static_mut: libc::c_int;
   |     ^^^^^ If I were you, I would simply try using a static value: `static`

error: aborting due to previous error

